<resources>
    <string name="app_name">Carrom King</string>
    <string name="profile">Profile</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="you_will_get_an_otp_on_this_number">You will get an OTP on this number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="by_proceeding_i_agree_to_terms_and_conditions_privacy_policy"><![CDATA[By proceeding,I agree to Terms and Conditions & Privacy Policy]]></string>
    <string name="get_otp">GET OTP</string>
    <string name="congrats">Congrats!!</string>
    <string name="got_it">Got it</string>
    <string name="file_shared">File Shared</string>
    <string name="add_money">Add Money</string>
    <string name="cancel">Cancel</string>
    <string name="enter_the_6_digit_otp_sent_to">Enter the 6 digit OTP sent to</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="battle_level">BATTLE (Level X)</string>
    <string name="win">Win</string>
    <string name="Rs">\u20B9</string>
    <string name="p2">2P</string>
    <string name="entry_fees">Entry Fees</string>
    <string name="play">Play</string>
    <string name="use_bonus">Use bonus of Rs.</string>
    <string name="diamond_lea">Diamond League</string>
    <string name="gold_lea">Gold League</string>
    <string name="silver_lea">Silver League</string>
    <string name="play_50_mor">Play 50 more games to unlock</string>
    <string name="woah_you_ma">Woah! You made it!</string>
    <string name="amount">0</string>
    <string name="game_wallet">Game Wallet Balance</string>
    <string name="plus_add_money">+ Add Money</string>
    <string name="phone_num">+91 8922345111</string>
    <string name="TAG">com.entwik.carromcash</string>
    <string name="withdraw_balance_amount">₹ 10.00</string>
    <string name="link_paytm_wallet">Link Paytm wallet</string>
    <string name="link_paytm_wallet_associated">Link Paytm wallet associated with this \nnumber:</string>
    <string name="proceed">Proceed</string>
    <string name="enter_otp_recieved">Enter OTP received on 9999999999</string>
    <string name="didnt_get_otp">Didn\'t get OTP?</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="verify_and_proceed">Verify and Proceed</string>
    <string name="recieve_in_upi">Receive in UPI</string>
    <string name="enter_your_upi_id">Enter your UPI ID</string>
    <string name="securly_vpa">Securely VPA</string>
    <string name="upi_icon">UPI_icon</string>
    <string name="carrom">Carrom</string>
    <string name="rupee">₹</string>
    <string name="beginner">Beginner</string>
    <string name="silver_league_home">Silver League</string>
    <string name="gold_league_home">Gold League</string>
    <string name="diamond_league_home">Diamond League</string>
    <string name="withdraw_balance_text">Withdrawble Balance</string>
    <string name="below_withdrawable_text">The amount will be cleared based on your transaction within two working days</string>
    <string name="amount_to_withdraw">Amount to Withdraw</string>
    <string name="funds_will_be_transferred_text">Funds will be transfereed to:</string>
    <string name="paytm_wallet_text">Paytm Wallet</string>
    <string name="link_account">LINK ACCOUNT</string>
    <string name="receive_in_upi">Receive in UPI</string>
    <string name="registered_upi_id">You  need to have a registered UPI ID.</string>
    <string name="bank_transfer_text">Receive in your bank account</string>
    <string name="daily_withdrawal_limit_text">Daily <br />Withdrawal Limit</string>
    <string name="daily_withdrawal_limit">₹ 5000</string>
    <string name="min_withdrawable_amount_text">Minimum withdrawable <br />Amount</string>
    <string name="min_withdrawal_amount_value">₹ 0</string>
    <string name="withdrawal_commission_text">Withdrawal <br />Commission</string>
    <string name="withdrawal_commission_value">5%</string>
    <string name="withdraw_now">Withdraw Now</string>

    <string name="rupee_hundred">₹ 100</string>
    <string name="rupee_ten">₹ 10</string>
    <string name="rupee_twenty">₹ 20</string>
    <string name="rupee_fifty">₹ 50</string>
    <string name="add_cash">Add Cash</string>
    <string name="recieve_in_your_bank_account">Receive in your bank account</string>
    <string name="account_number">Account Number</string>
    <string name="confirm_account">Confirm Account</string>
    <string name="ifsc">IFSC</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="or">or</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="continuee">Continue</string>
    <string name="bank_link_declaration">I hereby declare that the information provided by me is correct.</string>

    <string name="credited_24_hours">The amount will be credited to your preferred <br />mode in next 24 hrs.</string>
    <string name="keep_playing">Keep Playing</string>
    <string name="total_balance">Total Balance</string>
    <string name="unplayed">Unplayed</string>
    <string name="winning">Winning</string>
    <string name="add_money_wallet">+ Add Money</string>
    <string name="withdraw_wallet">Withdraw</string>
    <string name="welcome_bonus">Welcome Bonus</string>
    <string name="plus_rupee">+₹</string>
    <string name="all">All</string>
    <string name="in_progress">In Progress</string>
    <string name="successful">Successful</string>
    <string name="failed">Failed</string>
    <string name="todo">TODO</string>
    <string name="see_all_transactions">See All Transactions</string>
    <string name="_25_00">-₹25.00</string>
    <string name="_10_sep_11_pm">10,Sep 11:PM</string>
    <string name="p_25_00">+₹25.00</string>
    <string name="pending">Pending</string>
    <string name="transaction_history">Transaction History</string>

    <string name="otp_not_received">Didn\'t Receive OTP?</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="change_mobile_num">Change Mobile Number?</string>
    <string name="_00_15">00 : 15</string>
    <string name="_0_00">0.00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="withdrawal_successful">Withdrawal Request Successful!</string>
    <string name="withdrawal_pending">Withdrawal Request Pending!</string>
    <string name="withdrawal_failed">Withdrawal Request Failed!</string>
    <string name="deposit_successful">Deposit Request Successful!</string>
    <string name="deposit_pending">Deposit Request Pending!</string>
    <string name="deposit_failed">Deposit Request Failed!</string>
    <string name="retry">Retry</string>

    <!--Info dialog-->
    <string name="unplayed_title">Unplayed</string>
    <string name="winning_title">Winning</string>
    <string name="cash_bonus_title">Cash Bonus</string>
    <string name="unplayed_msg">Money that you will deposit and can be used to join contest but you can’t withdraw</string>
    <string name="winning_msg">This is the money that you can withdraw or re-use to join a contest</string>
    <string name="cash_bonus_msg">Maximum amount of cash bonus that may be used by a user to participate in any particular contest shall be decided by the company and can vary</string>



</resources>