<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular_400"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="17dp">


        <TextView
            android:id="@+id/withdrawal_successful"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="143dp"
            android:text="@string/withdrawal_successful"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imvWithdrawSuccessful"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/withdrawal_successful_clipart"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/credited_24_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:text="@string/credited_24_hours"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <Button
            android:id="@+id/keepPlaying"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/withdraw_now_blue_bg"
            android:text="@string/keep_playing"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>
</ScrollView>