<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bank_icon" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_medium_500"
        android:text="@string/recieve_in_your_bank_account"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="#1D9FFF"
        android:ems="10"
        android:hint="@string/account_number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="#1D9FFF"
        android:ems="10"
        android:hint="@string/confirm_account"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="#1D9FFF"
        android:ems="10"
        android:hint="@string/ifsc"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="#1D9FFF"
        android:ems="10"
        android:hint="@string/account_holder_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="38dp"
        android:fontFamily="@font/roboto_regular_400"
        android:text="@string/bank_link_declaration"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/roboto_medium_500"
        android:text="@string/verify_and_proceed"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />
</androidx.constraintlayout.widget.ConstraintLayout>