<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardView_wallet"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome_bon_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/roboto_regular_400"
            android:gravity="top"
            android:text="@string/welcome_bonus"
            android:textColor="#2B2B2B"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/time_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="37dp"
            android:gravity="top"
            android:paddingBottom="12dp"
            android:text="@string/_10_sep_11_pm"
            android:textColor="#ADADAD"
            android:textSize="11sp" />


        <TextView
            android:id="@+id/amount_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/roboto_bold_700"
            android:gravity="top"
            android:text="@string/p_25_00"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/status_wallet_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/roboto_regular_400"
            android:gravity="top"
            android:text="@string/successful"
            android:textColor="#2B2B2B"
            android:textSize="11sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>