<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="17dp"
    android:fontFamily="@font/roboto_regular_400"
    android:gravity="center_horizontal">


    <TextView
        android:id="@+id/withdrawal_successful"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="143dp"
        android:text="@string/withdrawal_successful"
        android:textSize="14sp"
        android:textColor="#27AE60"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/withdrawal_successful_clipart"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/credited_24_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/credited_24_hours"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="10sp"
        />

    <Button
        android:id="@+id/keepPlaying"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:textAllCaps="false"
        android:text="@string/keep_playing"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:background="@drawable/withdraw_now_blue_bg"
        />

</LinearLayout>
    </ScrollView>